finish son-header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>learn-git</title>
 <body>   
     <header>
-        this is header
+        this is son-header
     </header>
     <h1>Learn-git</h1>
 </body>
