--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>learn-git</title>
 <body>
+    <header>adf</header>
+     <main>
+         <section>banner</section>
+     </main>
     <h1>Learn-git</h1>
 </body>
 </html>
