--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>adf</header>
      <main>
-         <section>banner</section>
+         <section>banner1</section>
      </main>
     <h1>Learn-git</h1>
 </body>
